manifests/deploy/03-deployment-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    image.openshift.io/triggers: |
      [
        {"from":{"kind":"ImageStreamTag","name":"cluster-ninja:frontend"},"fieldPath":"spec.template.spec.containers[?(@.name==\"cluster-ninja\")].image"}
      ]
  labels:
    app: cluster-ninja
    component: frontend
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: cluster-ninja
      component: frontend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cluster-ninja
        component: frontend
    spec:
      containers:
        - image: ' '
          imagePullPolicy: Always
          name: cluster-ninja
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
