manifests/deploy/07-route-backend.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: backend
spec:
  path: /api
  to:
    kind: Service
    name: backend
    weight: 100
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
